deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apm-serve
  labels:
    app: apm-serve
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apm-serve
  template:
    metadata:
      labels:
        app: apm-serve 
    spec:
      containers:
      - name: apm-serve
        image: shalzz/apm-serve:latest
        ports:
        - name: http
          containerPort: 8080
        - name: metrics
          containerPort: 8081
