svc.yml
apiVersion: v1
kind: Service
metadata:
  name: apm-serve-service
  labels:
    app: apm-serve
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: metrics
      port: 8081
      targetPort: metrics
  selector:
    app: apm-serve
