ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: dapp.rinkeby.aragonpm.com
    http:
      paths:
      - backend:
          serviceName: apm-serve-service
          servicePort: 80
